# gpu-fan-alert

./: .gitignore  Cargo.toml  build.rs  tray-icon.rc
ati-adl-sdk-sys/: Cargo.toml
ati-adl-sys/: Cargo.toml
ati-adl-sys/src/: lib.rs
ati_adl_sdk_sys/: Cargo.toml  fetch_headers.py  wrapper.h
ati_adl_sdk_sys/adl_headers/: functions.h
ati_adl_sdk_sys/adl_headers/functions/: adapter.h  adl.h  appprofiles.h  controller.h  crossdisplay.h  display.h  displaysmanager.h  graphics.h  lnx.h  overdrive5.h  overdrive6.h  overdrive8.h  overdriveN.h  powerxpress.h  radeonusbled.h  secure_crt_linux.h  workstation.h
src/: adl.rs  gpu.rs  main.rs  sound.rs
