[package]
name = "gpu-fan-alert"
authors = ["Chris Lieb <chris.lieb@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "~1.0.60"
cpal = "~0.13.5"
crossbeam-channel = "~0.5.6"
ctrlc = "~3.2.3"
env_logger = "~0.9.0"
int-enum = "~0.4.0"
log = "~0.4.17"
sysinfo = "~0.25.1"

[build-dependencies]
windres = "~0.2.2"

[dependencies.ati-adl-sys]
path = "ati-adl-sys"
