[package]
name = "gpu-fan-alert"
authors = ["Chris Lieb <chris.lieb@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "~1.0.66"
cpal = "~0.14.2"
crossbeam-channel = "~0.5.6"
ctrlc = "~3.2.3"
int-enum = "~0.5.0"
nu-ansi-term = "~0.46.0"
sysinfo = "~0.27.0"
tracing = "~0.1.37"
tracing-appender = "~0.2.2"
tracing-subscriber = "~0.3.16"

[target.'cfg(windows)'.build-dependencies]
winres = "~0.1.12"

[dependencies.ati-adl-sys]
path = "ati-adl-sys"
